--- a/temp.css
+++ b/temp.css
@@ -1,51 +1,103 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Inconsolata|Merriweather");
 html {
   cursor: url(./cursor.svg), default;
   font-family: "Roboto", sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
-  width: 100%;
-  height: 100vh;
-  background: beige;
-  background-image: linear-gradient(rgb(221, 221, 221) 0.1em, transparent 0em), linear-gradient(90deg, rgb(110, 136, 161) 0em, transparent 0.1em);
-  background-size: 3em 3em;
+  overflow: hidden;
+  margin: 0;
 }
 
 .content0 {
   display: flex;
   justify-content: flex-end;
+  background-color: black;
+  height: 10vh;
+  width: 100vw;
+  position: fixed;
+  color: #fefefe;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .container {
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 10px;
 }
 .container > * {
-  /*color: #353535;*/
   font-size: 1.2em;
   line-height: 1.5;
   padding: 20px;
-  /*background: #d0cfc5;*/
 }
 .container .titre {
-  font-size: 5vh;
+  font-size: xx-large;
   padding-left: 10%;
 }
-.container nav {
-  margin-left: 30%;
+.container header output {
+  font-size: large;
 }
-.container nav ul {
+.container header nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.container nav ul li a {
-  color: black;
+.container header nav ul li a {
+  color: white;
   text-decoration: none;
-  padding: 2%;
-  font-size: 5vh;
+  font-size: xx-large;
+}
+
+/******************************************typewriter***********************************************************/
+/* Animation */
+.hello, .hello0, .hello1, .hello2, .hello3 {
+  white-space: nowrap;
+  overflow: hidden;
+  font-family: "Source Code Pro", monospace;
+  font-size: 40px;
+  color: white;
+}
+
+/* text animation  effet machine à ecrire*/
+@keyframes animated-text {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+.hello {
+  animation: animated-text 2s steps(20, end) 1s 1 normal both, type 600ms steps(30, end) 8;
+}
+
+.hello0 {
+  animation: animated-text 2s steps(20, end) 3s 1 normal both, type 600ms steps(30, end) 8;
+}
+
+.hello1 {
+  animation: animated-text 2s steps(20, end) 5s 1 normal both, taper 600ms steps(20, end) 8;
+}
+
+.hello2 {
+  animation: animated-text 2s steps(20, end) 7s 1 normal both, taper 600ms steps(20, end) 8;
+}
+
+.hello3 {
+  animation: animated-text 2s steps(20, end) 9s 1 normal both, taper 600ms steps(20, end) 8;
+}
+
+.nom {
+  font-size: 200px;
+  color: white;
+  line-height: 1;
+}
+
+.fonction {
+  font-size: 50px;
+  color: white;
 }
 
 @media only screen and (min-width: 600px) {
@@ -57,36 +109,59 @@ body {
   }
   .container #article0 {
     grid-column: span 3;
-    padding-left: 15%;
-    font-size: xx-large;
+    font-size: 30px;
+    height: 90vh;
+    color: black;
+    padding: 20% 10% 10% 10%;
+    background-color: #15227A;
+  }
+  .container aside {
+    background-color: aquamarine;
+  }
+  .container aside > img {
+    margin-top: 30%;
+    min-width: 800px;
   }
   .container #article1 {
     grid-column: span 4;
+    height: 100vh;
   }
   .container #article2 {
     grid-column: span 4;
-    padding: 5px;
-    max-width: 950px;
-    width: 95%;
-    margin: 20px auto;
+    height: 100vh;
+    margin-top: 20%;
   }
-  .container #article2 .titre {
-    padding: 0 15px;
+  .container #article2 .titre2 h1 {
+    font-size: 80px;
+  }
+  .container #article2 .sous_titre {
+    font-size: 40px;
   }
   .container #article3 {
     grid-column: span 4;
+    height: 100vh;
   }
-  .container #article4 {
-    grid-column: span 4;
+  .container #article3 .titre2 h1 {
+    font-size: 80px;
   }
-  .container nav ul li {
-    display: inline-block;
-    padding: 0 20px 0 0;
-  }
-  .container .toggle {
-    display: none;
+  .container #article3 .sous_titre {
+    font-size: 40px;
   }
 }
+#article4 {
+  grid-column: span 4;
+  height: 100vh;
+}
+
+nav ul li {
+  display: inline-block;
+  padding: 0 20px 0 0;
+}
+
+.toggle {
+  display: none;
+}
+
 @media only screen and (max-width: 599px) {
   #nav {
     transition: transform 0.3s ease-in-out;
@@ -110,20 +185,22 @@ body {
   }
 }
 .cards {
-  margin: auto;
+  margin-top: 10%;
+  margin-left: 30%;
+  margin-right: 30%;
+  padding: 5%;
   background: #fefefe;
   border-radius: 5px;
   overflow: hidden;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1), 3px 5px 20px rgba(0, 0, 0, 0.2);
-  width: 768px;
-  height: 550px;
-  padding: 5%;
 }
-.cards h3 {
+.cards .card h3 {
   font-size: 3vh;
+  padding: 10%;
 }
-.cards h4 {
+.cards .card h4 {
   font-size: 5vh;
+  padding: 5%;
 }
 
 /***************************************************************************************************/
@@ -132,6 +209,7 @@ body {
   flex-flow: row wrap;
   justify-content: center;
   margin: 5px 0;
+  height: 60vh;
 }
 .columns .column {
   flex: 1;
@@ -149,6 +227,7 @@ body {
 /****************************************colonne 3 effet****************/
 .col3 li {
   font-weight: bold;
+  font-size: 180px;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 .col3 .html h4,
@@ -254,8 +333,8 @@ body {
 
 /**********************************************portfolio********************************************************/
 #portfolio {
-  width: 100%;
-  min-height: 100vh;
+  width: 80%;
+  min-height: 80vh;
   background: #ffffff;
   position: relative;
   display: grid;
