--- a/temp.scss
+++ b/temp.scss
@@ -7,71 +7,142 @@ $font_col3_large:medium;
 $font_col3_xxlarge:medium;
 $column3_size : 30vw;
 $font_family :Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-
 html
 {
     cursor: url(./cursor.svg),default;
-	
 	font-family: 'Roboto', sans-serif;
-	
+    scroll-behavior: smooth;
 }
-
-body {
-	
-	
-	width: 100%;
-	height: 100vh;
-    background:beige;
-	background-image: linear-gradient(rgb(221, 221, 221) .1em, transparent .0em) ,linear-gradient(90deg, rgb(110, 136, 161) .0em, transparent .1em);
-	background-size: 3em 3em;
-	
-  }
-
+body
+{
+	overflow: hidden;
+	margin: 0;
+}
 // grid
-.content0 {
+.content0 
+{
 	display: flex;
 	justify-content: flex-end;
+	background-color: black;
+	height: 10vh;
+	width: 100vw;
+	position: fixed;
+	color: #fefefe;
+	display: grid;
+    grid-template-columns: repeat(3, 1fr);
+	
   }
-  
-  .container {
+
+  .container
+  {
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-gap: 10px;
-  
+	
 	// items
 	> * {
-	  /*color: #353535;*/
+	  
 	  font-size: 1.2em;
 	  line-height: 1.5;
 	  padding: 20px;
-	  /*background: #d0cfc5;*/
+	  
 	}
-	.titre {
-		font-size: $font_size_nav;
+	.titre 
+	{
+		font-size:xx-large;
 		padding-left: 10%;
 	}
-  
-	// nav styles
-	nav {
-	  margin-left: 30%;
-  
-	  ul {
-		list-style: none;
-		margin: 0;
-		padding: 0;
-  
-		li {
-		  a {
-			color: black;
-			text-decoration: none;
-			padding: 2%;
-			font-size: $font_size_nav;
-			
-		  }
+	header 
+	{
+		
+		
+		output
+		{
+		
+		font-size: large;
 		}
-	  }
+		// nav styles
+		nav 
+		{
+		
+		ul {
+			list-style: none;
+			margin: 0;
+			padding: 0;
+			
+	
+			li {
+			a {
+				color: white;
+				text-decoration: none;
+				font-size: xx-large;
+				
+			}
+			}
+		}
+		}
+
 	}
+	
   }
+  /******************************************typewriter***********************************************************/
+/* Animation */
+.hello,.hello0,.hello1,.hello2,.hello3
+{
+
+  white-space: nowrap;
+  overflow: hidden;    
+  font-family: 'Source Code Pro', monospace;  
+  font-size: 40px;
+  color:white;
+  
+}
+/* text animation  effet machine à ecrire*/
+@keyframes animated-text
+{
+    from{width: 0;}
+    to{ width: 100%;}
+}
+.hello
+{
+    animation:
+    animated-text 2s steps(20,end) 1s 1 normal both,
+    type 600ms steps(30, end) 8;
+}
+.hello0
+{
+    animation:
+    animated-text 2s steps(20,end) 3s 1 normal both,
+    type 600ms steps(30, end) 8;
+}
+.hello1
+{
+    animation:
+    animated-text 2s steps(20,end) 5s 1 normal both,
+    taper 600ms steps(20,end) 8 ;
+}
+.hello2
+{
+    animation:
+    animated-text 2s steps(20,end) 7s 1 normal both,
+    taper 600ms steps(20,end) 8;
+}
+.hello3
+{
+    animation:
+    animated-text 2s steps(20,end) 9s 1 normal both,
+    taper 600ms steps(20,end) 8;
+}
+.nom
+{
+ font-size: 200px;
+ color: white;
+ line-height: 1;
+}
+.fonction
+{
+ font-size: 50px;
+ color: white;
+}
 
   // media query for grid layout
   @media only screen and (min-width: 600px) {
@@ -82,41 +153,78 @@ body {
 	  // specific item styles
 	  header, nav, footer {
 		grid-column: span 4;
-	  }
+	}
   
 	  #article0 
 	  {
+		
 		grid-column: span 3;
-		padding-left: 15%;
-		font-size: xx-large;
+		font-size: 30px;
+		height: 90vh;
+		color: black;
+		padding: 20% 10% 10% 10%;
+		background-color: #15227A;
 	}
-  
-	  #article1 {
+	aside
+	{
+		background-color: aquamarine;
+	}
+	aside > img
+	{
+		margin-top: 30%;
+		min-width: 800px;
+		
+	}
+	  #article1 
+	  {
 		grid-column: span 4;
+		height: 100vh;
 	  }
   
 	  #article2 
 	  {
 		grid-column: span 4;
-	    padding: 5px;
-		max-width:950px;
-		width: 95%;
-		margin: 20px auto;
-	
-		.titre 
+		height: 100vh;
+		margin-top: 20%;
+		
+		
+		.titre2 h1
 		{
-			padding: 0 15px;
-			
+			font-size: 80px;
+		}
+		.sous_titre
+		{
+			font-size: 40px;
 		}
 	  }
-  
-	  #article3 {
+	  #article3
+	  {
 		grid-column: span 4;
+		height: 100vh;
+	
+		
+		.titre2 h1
+		{
+			font-size: 80px;
+		}
+		.sous_titre
+		{
+			font-size: 40px;
+		}
+	  }
+	
+		
+		
+	}
+  
+	
 	  }
   
 	  #article4 {
 		grid-column: span 4;
+		height: 100vh;
 	  }
+	  
   
 	  // nav styles
 	  nav ul li {
@@ -128,8 +236,8 @@ body {
 	  .toggle {
 		display: none;
 	  }
-	}
-  }
+	
+  
   
   // media query for nav styles
   @media only screen and (max-width: 599px) {
@@ -158,30 +266,36 @@ body {
   }
   .cards
   {
-	margin: auto;
+	margin-top: 10%;
+	margin-left: 30%;
+	margin-right: 30%;
+	padding: 5%;
 	background: #fefefe;
 	border-radius: 5px;
 	overflow: hidden;
 	box-shadow: 0 2px 10px rgba(0,0,0,.1), 3px 5px 20px rgba(0,0,0,.2);
-	width: 768px;
-	height:550px;
-	
-	padding: 5%;
-	h3
+
+
+	.card h3
 	{
 		font-size: $font_size_sous_sous_titre;
+		padding: 10%;
 	}
-	h4
+	.card h4
 	{
 		font-size: $font_size_sous_titre;
+		padding: 5%;
 	}
 }
 /***************************************************************************************************/
-.columns {
+
+.columns 
+{
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
 	margin: 5px 0;
+	height: 60vh;
   
 	.column {
 	  flex: 1;
@@ -199,13 +313,12 @@ body {
 	}
   }
   /****************************************colonne 3 effet****************/
- 
-
-  .col3 
+ .col3 
 {   
 	li
 	{
 		font-weight: bold;
+		font-size: 180px;
     	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 	 }
 	 .html h4 ,
@@ -337,8 +450,8 @@ body {
 
 	
 	#portfolio {
-	  width: 100%;
-	  min-height: 100vh;
+	  width: 80%;
+	  min-height: 80vh;
 	  background: $white;
 	  position: relative;
 	  display: grid;
@@ -444,7 +557,8 @@ body {
 	  opacity: 1;
 	}
 	
-	.close {
+	.close 
+	{
 	  position: absolute;
 	  top: 3px;
 	  right: 10px;
@@ -458,4 +572,3 @@ body {
 		color: $secondary;
 	  }
 	}
-	
