--- a/assets/temp.scss
+++ b/assets/temp.scss
@@ -35,7 +35,13 @@ body
 	overflow: $overflow;
 	margin: 0;
 	background-color: beige;
-	
+}
+.inactive
+{
+ display: none;
+}
+.active {
+	display: block;
 }
 
 ///////////////////////////////////////CONTENU PAGE////////////////////////////////////////////////////////////////
@@ -204,8 +210,8 @@ aside
 #portfolio 
 {
 padding: 20vh;
-width: 80vw;
-height: 80vh;
+width: 70vw;
+height: 70vh;
 display: grid;
 grid-template-columns: repeat(4, minmax(200px, 1fr));
 grid-template-rows: 1fr 1fr;
@@ -420,6 +426,13 @@ padding-top: 5%;
 
 
 	  /*/////////////////////////////////////////////////////////////////////Portfolio//////////////////////////////////////////////////////////////////////////////////////////*/
+	  .hide
+	   {
+		display: none;
+	  }
+	  .show {
+		display: block;
+	  }
 	  #article3
 	  {
 		grid-column: span 4;
@@ -441,12 +454,18 @@ padding-top: 5%;
 
 		}
       
-		.project {
+		.project 
+		{
 			position: relative;
-			background: $primary;
-			overflow: hidden;
+		    overflow: hidden;
 			
+	  .description
+	  {
+		padding-top: 30%;
+		font-size: 10px;
 	
+	  }
+
 		p {
 			position: absolute;
 			text-align: center;
@@ -473,12 +492,18 @@ padding-top: 5%;
 		}
 
 		// project hover overlay
-		.project:hover .grid__overlay {
-		transform: translateY(0%);
+		.project:hover {
+			
+					img {
+						opacity: 30%;
+					}
 		}
-
-		.grid__overlay {
-		background: rgba(darken($primary, 10%), .9);
+			
+		
+	
+		.grid__overlay
+		 {
+	
 		height: 100%;
 		grid-column: 1 / -1;
 		grid-row: 1/ -1;
@@ -486,9 +511,13 @@ padding-top: 5%;
 		display: grid;
 		justify-items: center;
 		align-items: center;
-		transform: translateY(101%);
-		transition: $ease;
-		button {
+		
+	
+	
+		button
+		 {
+			display: flex;
+			flex-direction: flex-end;
 			background: none;
 			outline: none;
 			font-weight: 100;
@@ -498,10 +527,9 @@ padding-top: 5%;
 			text-transform: uppercase;
 			padding: 10px;
 			&:hover {
-			transition: $ease;
 			background: $white;
 			color: $secondary;
-			transform: scale(1.05);
+			
 			}
 		}
 		}
@@ -516,7 +544,7 @@ padding-top: 5%;
 		bottom: 0;
 		left: 0;
 		display: none;
-		z-index: 3;
+		z-index: 10000;
 		}
 		.overlay.open {
 		display: grid;
@@ -536,16 +564,7 @@ padding-top: 5%;
 			max-height: 600px;
 		}
 		}
-		.hide
-		{
-			display: none;
-		}
-		.description
-		{
-			p {
-				color: black;
-			}
-		}
+		
 		.close {
 		position: absolute;
 		top: 3px;
