--- a/assets/responsive.css
+++ b/assets/responsive.css
@@ -4,42 +4,40 @@
     padding-top: 10%;
   }
   #article0 .hello, #article0 .hello0, #article0 .hello1, #article0 .hello2, #article0 .hello3 {
-    font-size: 15px;
+    font-size: 20px;
   }
   aside img {
     padding-top: 40%;
     padding-left: 5%;
-    width: 300px;
+    width: 500px;
   }
   aside .hellobis {
-    font-size: 10px;
-  }
-  #nav li a {
     font-size: 20px;
   }
+  #nav li a {
+    font-size: 40px;
+  }
   .nom {
-    font-size: 85px;
+    margin-top: 20%;
+    font-size: 150px;
   }
   .fonction {
-    font-size: 25px;
-  }
-  .titre {
-    font-size: xx-large;
+    font-size: 40px;
   }
   #article2 #parcours {
-    padding-top: 20%;
-    font-size: 0.5em;
+    padding-top: 15%;
+    font-size: 1em;
   }
   #article2 .about2, #article2 .about3 {
     border-left: red solid 2px;
   }
   .cards {
     margin-top: 10%;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 20%;
+    margin-right: 20%;
   }
   .cards p {
-    font-size: 10px;
+    font-size: 20px;
   }
   .cards h3 {
     font-size: 1.5em;
@@ -62,7 +60,6 @@
     font-size: 10px;
   }
   #portfolio {
-    padding: 25vh;
     width: 80vw;
     height: 60vh;
     grid-template-columns: repeat(4, minmax(100px, 1fr));
