--- a/assets/responsive.scss
+++ b/assets/responsive.scss
@@ -110,18 +110,35 @@ $screen-mobile: 12in;
     width: 80vw;
     height: 60vh;
     grid-template-columns: repeat(4, minmax(100px, 1fr));
+  
  
-    
-.overlay__inner {
+    .parent {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      grid-template-rows: repeat(5, 1fr);
+      grid-column-gap: 0px;
+      grid-row-gap: 0px;
+      }
+      
+      .div1 { grid-area: 1 / 1 / 2 / 2; }
+      .div2 { grid-area: 1 / 2 / 2 / 3; }
+      .div3 { grid-area: 1 / 3 / 2 / 4; }
+      .div4 { grid-area: 1 / 4 / 2 / 5; }
+      .div5 { grid-area: 2 / 4 / 3 / 5; }
+      .div6 { grid-area: 3 / 4 / 4 / 5; }
+      .div7 { grid-area: 3 / 3 / 4 / 4; }
+      .div8 { grid-area: 2 / 3 / 3 / 4; }
+      .div9 { grid-area: 2 / 2 / 3 / 3; }
+      .div10 { grid-area: 3 / 2 / 4 / 3; }
+      .div11 { grid-area: 3 / 1 / 4 / 2; }
+      .div12 { grid-area: 2 / 1 / 3 / 2; }
+.div1,.div2,.div3,.div4,.div5,.div6,.div7,.div8,.div9,.div10,.div11,.div12
+ {
+  background-color: blueviolet;
+  width: 20vw;
+  height: 20vh;
 
-	width: 500px;
-	img
-	{
-		max-width: 400px;
-		max-height: 400px;
-	}
-	}
-
+}
 
 }
     /******************************************typewriter***********************************************************/
@@ -141,6 +158,8 @@ $screen-mobile: 12in;
   
 @media  (max-width:375px) {
 
+
+
 .container
 {
    display: flex;
@@ -155,9 +174,16 @@ $screen-mobile: 12in;
    {
     display: none;
    }
- 
+ }
+ #portfolio
+ {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
 
 }
+
+
 #article0  
 {
     padding-top: 5%;
@@ -167,6 +193,7 @@ $screen-mobile: 12in;
     }
         
 }
+
     aside
     {
        
@@ -204,13 +231,10 @@ $screen-mobile: 12in;
     {
     #parcours
       {
-        font-size: 0.5em;
+        display: none;
       }
-      .about2 ,.about3
-      {
-       border-left: red solid 1px;
-      }
-   }
+    }
+ 
    .cards
    {
     
@@ -256,6 +280,13 @@ $screen-mobile: 12in;
     font-family: 'Source Code Pro', monospace;  
     color:black;
     
+  }
+  .parent{
+    div {
+      display: flex;
+      flex-direction: column;
+      width: 50%;
+    }
   }
     
   }
