--- a/assets/temp.css
+++ b/assets/temp.css
@@ -85,6 +85,25 @@ aside .hellobis {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1), 3px 5px 20px rgba(0, 0, 0, 0.2);
 }
 
+.cards2 {
+  margin-top: 10%;
+  margin-left: 20%;
+  margin-right: 30%;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 2%;
+  padding-bottom: 5%;
+  margin-bottom: 10%;
+  background: #fefefe;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1), 3px 5px 20px rgba(0, 0, 0, 0.2);
+}
+
+.cadre3 {
+  margin-top: 20%;
+}
+
 .cards {
   margin-top: 10%;
   margin-left: 20%;
@@ -120,10 +139,6 @@ aside .hellobis {
   font-size: 20px;
 }
 
-#article4 .content5 {
-  padding-top: 10%;
-}
-
 #article2 {
   grid-column: span 4;
   height: 100vh;
@@ -138,21 +153,74 @@ aside .hellobis {
 }
 
 #portfolio {
-  padding: 20vh;
-  width: 70vw;
-  height: 70vh;
+  padding-left: 30vw;
+  padding-top: 20vh;
+  width: 80vw;
+  height: 80vh;
   display: grid;
   grid-template-columns: repeat(4, minmax(200px, 1fr));
   grid-template-rows: 1fr 1fr;
   grid-gap: 2px;
 }
-#portfolio .project img {
-  position: absolute;
-  opacity: 0.9;
-  width: 450px;
-  height: 450px;
-  -o-object-fit: cover;
-     object-fit: cover;
+#portfolio .parent {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+#portfolio .parent div {
+  width: 200px;
+  height: 200px;
+  border: solid black 1px;
+}
+#portfolio .parent div button {
+  margin: 50px;
+  padding: 5px;
+  border: none;
+  background-color: black;
+}
+#portfolio .parent div button a {
+  text-decoration: none;
+  color: white;
+}
+#portfolio .div1 {
+  background-image: url(./poem_cabine3.jpg);
+  background-size: 100%;
+  grid-area: 1/1/2/2;
+}
+#portfolio .div2 {
+  grid-area: 1/2/2/3;
+}
+#portfolio .div3 {
+  grid-area: 1/3/2/4;
+}
+#portfolio .div4 {
+  grid-area: 1/4/2/5;
+}
+#portfolio .div5 {
+  grid-area: 2/4/3/5;
+}
+#portfolio .div6 {
+  grid-area: 3/4/4/5;
+}
+#portfolio .div7 {
+  grid-area: 3/3/4/4;
+}
+#portfolio .div8 {
+  grid-area: 2/3/3/4;
+}
+#portfolio .div9 {
+  grid-area: 2/2/3/3;
+}
+#portfolio .div10 {
+  grid-area: 3/2/4/3;
+}
+#portfolio .div11 {
+  grid-area: 3/1/4/2;
+}
+#portfolio .div12 {
+  grid-area: 2/1/3/2;
 }
 
 /******************************************typewriter***********************************************************/
@@ -228,6 +296,9 @@ aside .hellobis {
   }
   .container aside {
     grid-column: span 3;
+  }
+  .container aside img {
+    width: 600px;
   }
   .container #article1 {
     grid-column: span 4;
@@ -466,4 +537,138 @@ article .forme {
 .profil_link a {
   text-decoration: none;
   color: black;
+}
+
+/* section demain*/
+/*footer*/
+footer {
+  width: 100%;
+  background: black;
+}
+footer h3 {
+  color: antiquewhite;
+}
+
+.content-footer {
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  font-size: 16px;
+  padding: 50px 0 100px;
+}
+.content-footer h3, .content-footer p > a {
+  text-decoration: none;
+  color: antiquewhite;
+}
+
+.bloc {
+  flex-basis: 20%;
+  margin: 0 30px;
+}
+.bloc h3, .bloc p > a {
+  text-decoration: none;
+  color: antiquewhite;
+}
+
+/* contact */
+.footer-contact h3,
+.footer-services h3,
+.footer-schedule h3,
+.footer-medias h3 {
+  font-size: 22px;
+  padding-bottom: 20px;
+}
+
+.schedule-list li a {
+  text-decoration: none;
+  color: antiquewhite;
+}
+
+.footer-contact p {
+  padding: 5px 0;
+}
+
+.media-list {
+  background-color: white;
+  padding: 10%;
+  border-radius: 15px;
+}
+.media-list li a {
+  font-size: 10px;
+  text-decoration: none;
+  color: black;
+}
+.media-list img {
+  padding: 5%;
+}
+
+/* Services */
+.services-list,
+.schedule-list,
+.media-list {
+  list-style-type: none;
+  text-decoration: none;
+  color: antiquewhite;
+}
+
+.services-list li {
+  padding: 2px 0;
+}
+
+.services-list a {
+  text-decoration: none;
+  color: antiquewhite;
+}
+
+.services-list a:hover {
+  color: rgb(3, 3, 3);
+}
+
+/* Medias */
+.media-list {
+  position: relative;
+  right: 10px;
+}
+
+.media-list svg {
+  width: 30px;
+  margin: 10px 10px;
+}
+
+.media-list a {
+  text-decoration: none;
+  color: #333;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+}
+
+/* Media queries */
+@media screen and (max-width: 1000px) {
+  .content-footer {
+    max-width: 100%;
+    flex-wrap: wrap;
+  }
+  .bloc {
+    flex-basis: auto;
+    margin: 20px 20px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .content-footer {
+    justify-content: center;
+    padding-top: 30px;
+  }
+  .bloc {
+    flex-basis: 70%;
+    /* margin: 10px; */
+  }
+  .footer-contact h3,
+  .footer-services h3,
+  .footer-schedule h3,
+  .footer-medias h3 {
+    padding-bottom: 5px;
+  }
 }/*# sourceMappingURL=temp.css.map */
