--- a/assets/temp.scss
+++ b/assets/temp.scss
@@ -269,7 +269,11 @@ grid-gap: 2px;
 		background-size: 100%;
 		grid-area: 1 / 1 / 2 / 2;
 	}
-	.div2 { grid-area: 1 / 2 / 2 / 3; }
+	.div2 { 
+		background-image: url(./button.jpg);
+		background-size: 100%;
+		grid-area: 1 / 2 / 2 / 3; 
+	     }
 	.div3 { grid-area: 1 / 3 / 2 / 4; }
 	.div4 { grid-area: 1 / 4 / 2 / 5; }
 	.div5 { grid-area: 2 / 4 / 3 / 5; }
